# telecom-test

./: .gitignore  CMakeLists.txt  README.md  improvements.md
descriptions/: in1.txt  in2.txt  in3.txt
src/: main.cpp
src/bots/: alice-bot.cpp  alice-bot.hpp
src/simulator/: simulator.cpp  simulator.hpp
src/terra/: common-types.hpp  dungeon.cpp  dungeon.hpp  parser.cpp  parser.hpp
tests/: test-alice-bot.cpp  test-default.cpp  test-parser.cpp
